# kwhois

./: .gitignore  Changes  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  i18n.c  i18n.h  install-sh  kwhois.1  kwhois.1.kr  kwhois.c  kwhois.spec  make-tld.php  new_gtlds.h  tld_server.h  whois.1  whois.1.kr  whois.c
docs/: INSTALL  INSTALL.kr  Makefile.am  Makefile.in  README  README.kr  kwhois.1  kwhois.1.kr  whois.1  whois.1.kr
docs/ko/: kwhois.1  whois.1
libidn/: Makefile  Makefile.am  Makefile.in  gunicomp.h  gunidecomp.h  idn-int.h  idn.c  idna.c  idna.h  internal.h  nfkc.c  profiles.c  punycode.c  punycode.h  stringprep.c  stringprep.h  stringprep_generic.c  stringprep_generic.h  toutf8.c
libracode/: Makefile  Makefile.am  Makefile.in  README  main.c  misc.c  misc.h  race.c  race.h
m4/: olibc.m4
po/: Makefile  Makefile.am  Makefile.in  default.pot  ko.po
