# $Id: configure.in,v 1.3 2004-02-04 08:29:21 oops Exp $
AC_INIT(Makefile.in)
AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr)
AC_PROG_CC()
AC_PROG_INSTALL()
AC_CHECK_HEADERS(stdio.h string.h ctype.h limits.h sys/types.h sys/socket.h \
		 stdlib.h unistd.h netinet/in.h arpa/nameser.h netdb.h errno.h \
		 sys/signal.h getopt.h libintl.h locale.h dlfcn.h error.h inttypes.h \
		 memory.h stdint.h sys/stat.h iconv.h langinfo.h)
AC_CHECK_LIB(socket,socket)
AC_CHECK_LIB(resolv,res_mkquery)
AC_CHECK_FUNCS(getaddrinfo)
AC_CHECK_FUNCS(getopt_long,, [AC_LIBOBJ(getopt) AC_LIBOBJ(getopt1)])
AC_OUTPUT(Makefile)
