## Process this file with automake to produce Makefile.in
# Copyright (C) 2011 JoungKyun.Kim <http://oops.org>
#
# This file is part of kwhois
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation, either version 2.1 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# $Id: Makefile.am 67 2011-09-10 19:25:25Z oops $

EXTRA_DIST = ko/whois.1 ko/kwhois.1
dist_man_MANS = whois.1 kwhois.1

ko_man1dir = $(mandir)/ko/man1
ko_man1_DATA = ko/whois.1 ko/kwhois.1
